모델 (데이터추출) 관련 소스 정리 추가

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -35,5 +35,7 @@
 <br>
 
 <%= link_to 'New Book', new_book_path %>
+<%= link_to 'Back', :controller => 'books', :action => 'index'%>
+<hr/>
+<br/>
 
-<%= link_to 'Back', root_path %>
