--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,13 @@
 <h1>Rails Sample Source</h1>
-<br/>
+<hr/>
 
+<h2>기본 작업한 예제</h2>
 <li><b><%= link_to 'Blog (Rails Guide)', "posts" %></b></li>
-<li><b><%= link_to 'Book (퍼펙트 루비 온 레일즈)', "books" %></b></li>
 <li><b><%= link_to 'Product Excel Import/Expert', "products" %></b></li>
+<br/>
+<hr/>
+
+
+<h2>퍼펙트 루비 온 레일즈</h2>
+<li><b><%= link_to 'Book - 기본', "books" %></b></li>
+<li><b><%= link_to 'Book - 모델 (데이터추출)', "record" %></b></li>
