--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,10 +4,11 @@
 <h2>기본 작업한 예제</h2>
 <li><b><%= link_to 'Blog (Rails Guide)', "posts" %></b></li>
 <li><b><%= link_to 'Product Excel Import/Expert', "products" %></b></li>
+<li><b><%= link_to 'Rails Admin', "admin" %></b></li>
 <br/>
 <hr/>
 
 
 <h2>퍼펙트 루비 온 레일즈</h2>
 <li><b><%= link_to 'Book - 기본', "books" %></b></li>
-<li><b><%= link_to 'Book - 모델 (데이터추출)', "record" %></b></li>
+<li><b><%= link_to 'Book - 모델 ( 데이터 추출하는 방법 )', "records" %></b></li>
