--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <hr/>
 
 <h2>기본 작업한 예제</h2>
-<li><b><%= link_to 'Blog (Rails Guide)', "posts" %></b></li>
+<li><b><%= link_to 'Blog (Post/Comment, Rails Guide)', "posts" %></b></li>
 <li><b><%= link_to 'Product Excel Import/Expert', "products" %></b></li>
 <li><b><%= link_to 'Rails Admin', "admin" %></b></li>
 <br/>
