--- a/app/views/surveys/_answer_fields.html.erb
+++ b/app/views/surveys/_answer_fields.html.erb
@@ -1,6 +1,7 @@
-<p>
+<fieldset>
   <%= f.label :content, "Answer" %>
   <%= f.text_field :content %>
   <%= f.check_box :_destroy %>
-  <%= f.label :_destroy, "Remove" %>
-</p>
+  <%= f.label :_destroy, "Answer Remove" %>
+
+</fieldset>
