--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -1,9 +1,9 @@
-<p>
+<fieldset>
   <%= f.label :content, "Question" %><br/>
-  <%= f.text_area :content, rows: 3 %><br/>
+  <%= f.text_area :content %><br/>
   <%= f.check_box :_destroy %>
   <%= f.label :_destroy, "Remove Question" %>
-</p>
-<%= f.fields_for :answers do |builder| %>
-  <%= render 'answer_fields', f: builder %>
-<% end %>
+  <%= f.fields_for :answers do |builder| %>
+    <%= render 'answer_fields', f: builder %>
+  <% end %>
+</fieldset>
