--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -3,7 +3,9 @@
   <%= f.text_area :content %><br/>
   <%= f.check_box :_destroy %>
   <%= f.label :_destroy, "Remove Question" %>
+
   <%= f.fields_for :answers do |builder| %>
-    <%= render 'answer_fields', f: builder %>
+    <%= render partial: 'questions/answer_fields', locals: {f: builder} %>
   <% end %>
+  <%= link_to_add_fields 'Add Answer', f, :answers %>
 </fieldset>
