--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -1,6 +1,8 @@
 <fieldset>
   <%= f.label :content, "Question" %><br/>
   <%= f.text_area :content %><br/>
+  <%= f.label :dummy_content %><br/>
+  <%= f.text_area :dummy_content %><br/>
   <%= f.check_box :_destroy %>
   <%= f.label :_destroy, "Remove Question" %>
 
